[package]
name = "pricing_application"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
opentelemetry = "0.23.0"
opentelemetry-stdout = "0.4.0"
opentelemetry_sdk = "0.23.0"
