[package]
name = "pricing_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }
tracing = "0.1.40"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.18"}
